# sist-cosm

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TASK.md  claude-sparc.sh  docker-compose.yml  main.py  manage.py  mcp.json  pyproject.toml
.github/workflows/: sparc_pipeline.yml
apps/common/: mixins.py
apps/empresa/: forms.py  models.py  urls.py  views.py
apps/empresa/migrations/: 0001_initial.py
apps/productos/: forms.py  models.py  urls.py  views.py
apps/productos/migrations/: 0001_initial.py  0002_add_sample_products.py  0003_update_product_images.py
apps/proveedores/: apps.py  forms.py  models.py  urls.py  views.py
apps/proveedores/migrations/: 0001_initial.py
apps/trabajadores/: apps.py  forms.py  models.py  urls.py  views.py
apps/trabajadores/migrations/: 0001_initial.py
apps/utils/: image_processing.py
cosmeticos_store/: asgi.py  settings.py  settings_local.py  settings_production.py  settings_test.py  urls.py  wsgi.py
docs/: DEVELOPMENT_SUMMARY.md  prd.md  python-coding-guidelines.md  python-guidelines.md
sist_cosm/: pyproject.toml
static/css/: cosmetics-theme.css
static/js/: cosmetics-app.js
templates/: base.html  home.html
templates/empresa/: create.html  delete.html  detail.html  no_info.html  update.html
templates/productos/: create.html  delete.html  list.html  update.html
templates/proveedores/: create.html  delete.html  list.html  update.html
templates/shared/: action_buttons.html  carousel.html  delete_base.html  empty_state.html  form_base.html  form_field.html  image_field.html  page_header.html  pagination.html  productos_create_demo.html  test_form_components.html
templates/trabajadores/: create.html  delete.html  list.html  update.html
tests/: base_test_cases.py  test_forms.py  test_integration.py  test_models.py  test_views.py
tests/fixtures/: producto_factory.py  trabajador_factory.py
tests/unit/test_trabajadores/: test_models.py  test_views.py
